--- a/src/apps/dashboard/index.css
+++ b/src/apps/dashboard/index.css
@@ -69,6 +69,7 @@
     color: white;
     padding: 10px 15px;
     border-radius: 20px;
+    text-decoration: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
 }
